# Mower-Robot

./: CMakeLists.txt  start.sh
canny/: CMakeLists.txt  readme.md
canny/setting/: setting.txt
canny/src/: test.cpp  test.cpp~
canny/src/edgedetect/: EdgeDetect.cpp  EdgeDetect.h
motorControl/: CMakeLists.txt  start.sh
motorControl/lib/: CMakeLists.txt  motorControl.h  motorcontrol.cpp
motorControl/test/: CMakeLists.txt
motorControl/test/src/: CMakeLists.txt
motorControl2/lib/: motorcontrol.h
motorControl2/test/src/: main.cpp
resource/: liblz4-1_0.0~r122-2_armhf.deb  liblz4-dev_0.0~r122-2_armhf.deb
src/: EdgeDetect.cpp  EdgeDetect.h  Makefile  Makefile.old  READ.txt  board_detect.cpp  cvtest.cpp  motor  motorControl.c  motorControl.cpp  motorControl.h  test1  video.cpp  videoCapture.cpp  videoCapture_1.cpp
src/Video_1/: Command.h  Decision.cpp  Decision.h  Makefile  Video.cpp  edge.cpp  test
test/: pthread.c  test
tutorial/: ROS.md
