SET(LIBMOTORCONTROL_SRC motorcontrol.cpp)
ADD_LIBRARY(motorcontrol SHARED ${LIBMOTORCONTROL_SRC})
ADD_LIBRARY(motorcontrol_static STATIC ${LIBMOTORCONTROL_SRC})

SET_TARGET_PROPERTIES(motorcontrol PROPERTIES VERSION 1.0 SOVERSION 1)

SET_TARGET_PROPERTIES(motorcontrol_static PROPERTIES OUTPUT_NAME "motorcontrol")
SET_TARGET_PROPERTIES(motorcontrol PROPERTIES CLEAN-DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(motorcontrol_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS motorcontrol motorcontrol_static
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)

INSTALL(FILES motorcontrol.h DESTINATION include)
